# ActiveJunctionModel

./: CMakeEigenSetup.txt  CMakeLists.txt  CMakeSRCSetup.txt  CMakeSubmodule.txt  README.md
analysis/: Graneraverages.py  basic_statistics.py  statistics_Graner_batch.py
analysis/AJMAnalysis/: LICENSE  README.md  setup.py
eLife/Figure1/: README  ajm_1d.m  fig1b.m  fig1c_and_fig_supplement_1c.m
eLife/Figure2/: README  honeycomb_14LR_centered_noconstraint.json  run_14cells_myopool.py
eLife/Figure3/: Plot_AJM_dynamics.py  README
eLife/Figure5/: README  analysis.py  data_ft1.p  plot.py
eLife/Figure6/: README  average_patch_script.sh  make_random_passive.py  random_40x40_patch.json  random_set_params.py
eLife/Figure8/: README  experiment_granerflow.py
eLife/Figures_4_3D_3S1/: README  plot_T1_statistics.py
makeconf/honeycomb_json/: honeycomb_lace.json  make_active_w_buffer.py  make_disk.py  make_hexagonal_shear.py  make_honeycomb.py  make_honeycomb_lace.py  make_honeycomb_sidepull.py  (+2 more)
src/: CMakeLists.txt  base_property.hpp  box.cpp  box.hpp  class_factory.hpp  constrainer.hpp  constraint.hpp  constraint_fixed.hpp  constraint_none.hpp  constraint_radial.hpp  constraint_ux.hpp  constraint_uy.hpp  constraint_x.hpp  constraint_y.hpp  dump.cpp  dump.hpp  force.hpp  force_active.cpp  force_active.hpp  force_active_area.cpp  force_active_area.hpp  force_active_dir.cpp  force_active_dir.hpp  force_active_spokes.cpp  force_active_spokes.hpp  force_angle.cpp  force_angle.hpp  force_area.cpp  force_area.hpp  force_compute.cpp  force_compute.hpp  force_harmonic.cpp  force_harmonic.hpp  force_harmonic_spokes.cpp  force_harmonic_spokes.hpp  force_line_tension.cpp  force_line_tension.hpp  force_perimeter.cpp  force_perimeter.hpp  force_self_propulsion.cpp  (+36 more)
(+108 files in other folders)
